# FGVC

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_different observation_handling.ipynb  tox.ini
.github/: issue_template.md  pull_request_template.md
.github/workflows/: code-quality.yml  release.yml  sphinx.yml  test.yml  unit-test.yml
docs/: requirements.txt
docs/source/: conf.py  first_steps.md  index.rst  installation.md  usage.md
examples/: grad_cam.ipynb
examples/configs/: vit_base_patch32_224.yaml
examples/sweeps/: init_sweep.yaml
experiments/Cyclic-LR/: test-vit_base_patch32_224.ipynb  train-vit_base_patch32_224.ipynb
experiments/baselines/: test-inception_v4_224.ipynb  test-resnet50.ipynb  test-tf_efficientnetv2_s_in21k.ipynb  test-vit_base_patch16_224.ipynb  test-vit_base_patch32_224.ipynb  test-vit_large_patch16_384.ipynb  train-inception_resnet_v2.ipynb  train-inception_resnet_v2_224.ipynb  train-inception_v4_224.ipynb  train-legacy_seresnext101_32x4d_384.ipynb  train-resnest269e_384.ipynb  train-resnet50.ipynb  train-tf_efficientnetv2_l_in21k.ipynb  train-tf_efficientnetv2_s_in21k.ipynb  train-vit_base_patch16_224.ipynb  train-vit_base_patch16_384.ipynb  train-vit_base_patch32_224.ipynb  train-vit_large_patch16_384.ipynb  train-vit_tiny_patch16_224.ipynb  train-vit_tiny_patch16_384.ipynb
experiments/heavy_transforms/: train-tf_efficientnetv2_s_in21k.ipynb
experiments/random_crop/: test-vit_base_patch32_224.ipynb  train-tf_efficientnetv2_s_in21k.ipynb  train-vit_base_patch32_224.ipynb
experiments/web_data_upsampling/: test-vit_base_patch32_224-upsampling10.ipynb  test-vit_base_patch32_224-upsampling20.ipynb  test-vit_base_patch32_224-upsampling30.ipynb  test-vit_base_patch32_224-upsampling40.ipynb  train-vit_base_patch32_224-upsampling10.ipynb  train-vit_base_patch32_224-upsampling20.ipynb  train-vit_base_patch32_224-upsampling30.ipynb  train-vit_base_patch32_224-upsampling40.ipynb
fgvc/: __init__.py  logging.yaml  version.py
fgvc/cli/: __init__.py  log_model.py  log_model_hfhub.py  test.py  train.py
fgvc/config/: logging.yaml  training_logging.yaml
fgvc/core/: __init__.py  augmentations.py  losses.py  metrics.py  models.py  optimizers.py  training.py
fgvc/datasets/: __init__.py  image_dataset.py  poison_dataset.py  prediction_dataset.py  segmentation_dataset.py  taxonomy_dataset.py
fgvc/losses/: __init__.py  classification.py  common.py  segmentation.py
metadata/: PlantCLEF2018_prepare_data.ipynb
scripts/: Jupyter-Galdor_job_22.01-r2.sh  Jupyter_job_22.01-r2.sh  test.py  testing_loop.ipynb  train.py
(+69 files in other folders)
