### Package Build ###
[metadata]
name = fgvc
version = attr: fgvc.version.__version__
description = Custom utils and modules for FGVC.
long_description = file: README.md
author = Lukas Picek
author_email = lukaspicek@gmail.com
url = https://github.com/picekl/FGVC

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy~=1.22.3
    timm~=0.6.5
    PyYAML~=6.0
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options.package_data]
* = *.yaml, *.yml

### Code Quality ###
[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    E203  # See https://github.com/PyCQA/pycodestyle/issues/373
    D100  # Missing docstring in public module
    D101  # Missing docstring in public class
    D104  # Missing docstring in public package
    D107  # Missing docstring in __init__
    D401  # First line should be in imperative mood
exclude = .git,__pycache__,.ipynb_checkpoints

[isort]
profile = black

[tool.black]
line-length = 88
# skip-string-normalization = true  # requouting '...' -> "..." can be disabled
