### Package Build ###
[metadata]
name = fgvc
version = v1.2.0-dev
description = Custom utils and modules for classification and segmentation tasks.
long_description = file: README.md
author = Lukas Picek and Rail Chamidullin
author_email = lukaspicek@gmail.com
url = https://github.com/picekl/FGVC
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    PyYAML~=6.0
    numpy~=1.22.3
    scipy~=1.8.1
    scikit-learn~=1.1.1
    matplotlib==3.5.2
    pandas~=1.4.2
    Pillow~=9.1.1
    timm~=0.6.5
    albumentations~=1.2.1
    fire~=0.4.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    fgvc = fgvc.cli:app

### Code Quality ###
[flake8]
max-line-length = 100
extend-ignore =
    E203  # See https://github.com/PyCQA/pycodestyle/issues/373
    D100  # Missing docstring in public module
    D101  # Missing docstring in public class
    D104  # Missing docstring in public package
    D105  # Missing docstring in magic method
    D107  # Missing docstring in __init__
    D401  # First line should be in imperative mood
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    dist
    build
